# Rust-OS

./: .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Makefile  README.md  WIRING_STATUS.md  build.rs  build_rustos.sh  context.md  learnings.md  package-lock.json  rustos-desktop.ppm
.cargo/: config.toml
.serena/: project.yml
c_libs/: kcompat.c  kcompat.h
docs/: AUDIT_2026-07-02.md  INSTALLER.md  PENDING_TODOS.md  boot-to-desktop-in-rust.md
examples/: package_manager_demo.rs
glib-rust/glib/rust/glib-native/: Cargo.toml  build.rs
glib-rust/glib/rust/glib-native/include/: glib_native.h
glib-rust/glib/rust/glib-native/src/: array.rs  asyncqueue.rs  atomic.rs  base64.rs  bitlock.rs  bytes.rs  cache.rs  charset.rs  checksum.rs  completion.rs  convert.rs  dataset.rs  date.rs  datetime.rs  dep_list.rs  dir.rs  environ.rs  error.rs  ffi.rs  ffi_parity.rs  fileutils.rs  gaction.rs  gactiongroup.rs  gactiongroupexporter.rs  gactionmap.rs  gappinfo.rs  gappinfomonitor.rs  gappinfoprivate.rs  gapplication.rs  gapplication_tool.rs  gapplicationcommandline.rs  gapplicationimpl.rs  gapplicationimpl_dbus.rs  gasynchelper.rs  gasyncinitable.rs  gasyncresult.rs  gatomicarray.rs  gbase64.rs  gbinding.rs  gbindinggroup.rs  (+429 more)
scripts/: alpine-resolve-deps.py  boot_smoke.sh  boot_smoke_gnome.sh  build-gnome-rootfs.sh  build-gnome-shell.sh  build-installer-gtk.sh  build-installer-initramfs.sh  build-live-iso.sh  build-live-squashfs.sh  build-mutter.sh  (+6 more)
userspace/init/: Cargo.toml  link.ld
userspace/init/.cargo/: config.toml
userspace/init/src/: main.rs
(+1619 files in other folders)
